backends/rust/src/snapshots/ridl_backend_rust__tests__inline_service_fallible_query_uses_the_dotted_service_name.snap
---
source: backends/rust/src/tests.rs
expression: source
---
/// Where a signal's current value came from (ridl §4.4, §4.5).
///
/// `Init` is the channel's seeded value, before the provider's first
/// publication; `Live` is a published value; `Invalid` marks a value
/// that violated the payload constraints — the malformed value is not
/// delivered, but its invalidity is, so no subscriber silently holds
/// stale last-good data.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum Provenance {
    Init,
    Live,
    Invalid,
}
/// A signal channel: state that always holds a value (ridl §4.4).
pub trait SignalHandle<T> {
    /// The current value and where it came from. Never fails: the
    /// channel is seeded with the init value at creation.
    fn read(&self) -> (T, Provenance);
    /// Registers a subscriber. It is called immediately with the
    /// current value, then on every change.
    fn subscribe(&mut self, f: Box<dyn FnMut(&T, Provenance)>);
}
/// An event channel: occurrences, which are not state (ridl §5). There
/// is no `read` — an occurrence that has not happened has no value.
pub trait EventHandle<T> {
    fn subscribe(&mut self, f: Box<dyn FnMut(&T)>);
}
/// A finite or unbounded sequence of payloads (ridl §12).
///
/// Declared here rather than taken from a runtime crate so the
/// generated module stays dependency-free; it is shaped so an adapter
/// to `futures::Stream` is a blanket impl.
pub trait RidlStream {
    type Item;
    fn poll_next(
        self: core::pin::Pin<&mut Self>,
        cx: &mut core::task::Context<'_>,
    ) -> core::task::Poll<Option<Self::Item>>;
}
/// How a timing annotation constrains an interaction (ridl §9).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum TimingMode {
    StrictPeriodic,
    Range,
}
/// One interaction's resolved timing, in exact microseconds.
///
/// `min_us` is the rate floor and `max_us` the staleness bound; a strict
/// period carries the same value in both. `default_applied` records that
/// the contract was written without a `@` annotation and the configured
/// default was resolved in (ridl §9.1).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub struct TimingConst {
    pub mode: TimingMode,
    pub min_us: Option<u64>,
    pub max_us: Option<u64>,
    pub default_applied: bool,
}
/// Which side of an interaction a contract clause constrains (ridl §13).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum ContractKind {
    Require,
    Ensure,
}
/// One contract clause as data, for an observer to install.
///
/// `id` is the observer address the IR assigns; it is a stable identity
/// carried verbatim, not a Rust name. `uses_result` says whether the
/// clause reads the query's result, which an `ensure` observer must
/// know before it can be scheduled — it cannot run until the result
/// exists. The flag is carried rather than inferred: `source` is text,
/// so matching on it would misread a parameter named `resultCode` or a
/// field access `.result`, and an `ensure` clause does not always read
/// the result.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub struct ContractStub {
    pub id: &'static str,
    pub kind: ContractKind,
    pub source: &'static str,
    pub signals: &'static [&'static str],
    pub params: &'static [&'static str],
    pub uses_result: bool,
}
/// The consumer face of `ServiceVehAdasLogs` — what a component that uses this interface calls (ridl §10.1).
#[allow(async_fn_in_trait)]
pub trait ServiceVehAdasLogsConsumer {
    /// query `fetchPage` — ordinal 3 (ridl §7).
    /// A transport failure is an infrastructure failure — detected, undeclared (gf §6.4): it is carried by runtime types, never by this signature.
    /// transport identity: veh.adas.logs#3:FaultPage|DiagError
    async fn fetch_page(&self, filter: DiagFilter) -> Result<FaultPage, DiagError>;
}
/// The provider face of `ServiceVehAdasLogs` — what a component that implements this interface fulfils (ridl §10.1). A `final` has no entry here: it is provisioned externally and populated at binding initialization (ridl §8).
#[allow(async_fn_in_trait)]
pub trait ServiceVehAdasLogsProvider {
    /// Handles `fetchPage` — query ordinal 3 (ridl §7).
    async fn on_fetch_page(
        &mut self,
        filter: DiagFilter,
    ) -> Result<FaultPage, DiagError>;
}
/// Resolved timing for every signal and event of `ServiceVehAdasLogs`, keyed by the source name, in exact microseconds (ridl §9).
pub const SERVICE_VEH_ADAS_LOGS_TIMING: &[(&str, TimingConst)] = &[];
/// Every `require` and `ensure` clause of `ServiceVehAdasLogs` as data, in source order, for an observer to install (ridl §13).
pub const SERVICE_VEH_ADAS_LOGS_CONTRACTS: &[ContractStub] = &[];
/// Every service this package declares: the deployment address and the
/// interface that answers at it (ridl §11).
///
/// The address is the contract's own dotted identity, carried verbatim;
/// the interface name is the generated Rust type prefix. For an inline
/// shape they differ by construction, and the address — not the type
/// name — is the identity the wire and the observers use.
pub const SERVICES: &[(&str, &str)] = &[("veh.adas.logs", "ServiceVehAdasLogs")];
