backends/rust/src/snapshots/ridl_backend_rust__tests__result_union.snap
---
source: backends/rust/src/tests.rs
expression: rust_for(decls)
---
/// Vehicle speed over ground
#[repr(transparent)]
pub struct Speed(pub f64);
impl Default for Speed {
    fn default() -> Self {
        Speed(0.0)
    }
}
#[repr(transparent)]
pub struct Counter(pub i64);
impl Default for Counter {
    fn default() -> Self {
        Counter(0)
    }
}
#[repr(C)]
pub struct SensorReading {
    pub value: Speed,
}
impl Default for SensorReading {
    fn default() -> Self {
        SensorReading {
            value: Speed::default(),
        }
    }
}
#[repr(C)]
pub struct SensorFault {
    pub code: Counter,
}
impl Default for SensorFault {
    fn default() -> Self {
        SensorFault {
            code: Counter::default(),
        }
    }
}
pub enum SensorResult {
    /// Successful reading
    Ok(SensorReading),
    Err(SensorFault),
}
impl Default for SensorResult {
    fn default() -> Self {
        SensorResult::Ok(SensorReading::default())
    }
}
