backends/rust/src/snapshots/ridl_backend_rust__tests__scalar_unit_type_with_doc.snap
---
source: backends/rust/src/tests.rs
expression: "rust_for(vec![speed_decl()])"
---
/// Vehicle speed over ground
#[repr(transparent)]
pub struct Speed(pub f64);
impl Default for Speed {
    fn default() -> Self {
        Speed(0.0)
    }
}
